--- a/src/Components/StartCounter-commented/StartCounter.css
+++ b/src/Components/StartCounter-commented/StartCounter.css
@@ -1,4 +1,4 @@
-.start-counter__container {
+/* .start-counter__container {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -10,4 +10,4 @@
 }
 .counter.hidden {
   display: none;
-}
+} */
