--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,11 @@
   height: 100vh;
   margin: 0 auto;
   text-align: center;
-  padding: 10px;
+  padding: 10px 10px;
+}
+
+@media (max-width: 1440px) {
+  #root {
+    padding: 10px 10px;
+  }
 }
