--- a/src/index.css
+++ b/src/index.css
@@ -14,45 +14,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -66,4 +33,23 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.error {
+  display: flex;
+  justify-content: space-around;
+  padding: 0px 4px;
+  background: linear-gradient(to bottom, #e07676 5%, #b95252 100%);
+  background-color: #a04e4e;
+  border-radius: 4px;
+  border: 1px solid #983838;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 13px;
+  font-weight: bold;
+  padding: 1px 6px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #954444;
+  align-items: center;
 }
