--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -51,21 +51,29 @@
     height: 250px;
   }
 }
-
+/* 
 @media (max-width: 768px) {
   .card {
+    width: 120px;
     height: 200px;
   }
 }
 
 @media (max-width: 645px) {
   .card {
+    width: 76px;
     height: 160px;
   }
 }
 
 @media (max-width: 485px) {
   .card {
-    height: 140px;
+    height: 160px;
   }
 }
+
+@media (max-width: 375px) {
+  .card {
+    height: 160px;
+  }
+} */
