--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -1,7 +1,8 @@
 .dashboard {
   padding: 10px 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 4px;
 }
 .timer__container,
 .attempts__container,
