--- a/src/Components/GameBoard/GameBoard.css
+++ b/src/Components/GameBoard/GameBoard.css
@@ -12,7 +12,7 @@
 
   justify-content: center;
 }
-
+/* 
 @media (max-width: 426px) {
   .game-board__container {
     display: flex;
@@ -24,4 +24,4 @@
     flex-direction: column;
     align-items: center;
   }
-}
+} */
