--- a/src/Components/GameBoard/GameBoard.css
+++ b/src/Components/GameBoard/GameBoard.css
@@ -12,8 +12,8 @@
 
   justify-content: center;
 }
-/* 
-@media (max-width: 426px) {
+
+@media (max-width: 540px) {
   .game-board__container {
     display: flex;
 
@@ -24,4 +24,4 @@
     flex-direction: column;
     align-items: center;
   }
-} */
+}
