--- a/src/Components/LanguageSelector/LanguageSelector.css
+++ b/src/Components/LanguageSelector/LanguageSelector.css
@@ -1,6 +1,6 @@
 .language-selector {
-  position: absolute;
+  /* position: absolute;
   right: 0;
   top: 30px;
-  transform: translateY(-50%);
+  transform: translateY(-50%); */
 }
