--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,18 @@
 #root {
   width: 100vw;
-  height: 100vh;
   margin: 0 auto;
   text-align: center;
   /* padding: 10px 10px; */
+}
+.mode__wrapper--dark {
+  height: 100vh;
+
+  background-color: #090b0d;
+}
+.mode__wrapper--light {
+  height: 100vh;
+
+  background-color: #f2f2f2;
 }
 
 /* @media (max-width: 1440px) {
