--- a/src/Pages/StartPage/StartPage.css
+++ b/src/Pages/StartPage/StartPage.css
@@ -1,13 +1,12 @@
 .rules-container {
-  max-width: 720px;
-
+  max-width: 740px;
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
-
-  margin: 0 auto;
+  box-sizing: border-box;
+  margin: 40px auto;
 }
 
 .rules-heading {
