--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -52,6 +52,7 @@
   border-radius: 4px;
   font-size: 12px;
   padding: 0.5rem;
+  border: solid 1px transparent;
 }
 
 .mode__wrapper--dark .nav-link {
