--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -16,12 +16,12 @@
   color: #ffffff;
   font-family: Roboto;
   font-size: 12px;
-  padding: 0.5rem;
+  padding: 2px 10px;
   font-weight: bold;
   text-decoration: none;
   text-shadow: 0px 1px 0px #41454c;
   align-items: center;
-  min-width: 100px;
+  min-width: 142px;
   border: 1px transparent solid;
 }
 
@@ -29,6 +29,10 @@
   background: transparent;
   border: solid 1px;
   opacity: 0.6;
+}
+
+.mode__wrapper--dark .dashboard-item:hover {
+  opacity: 1;
 }
 
 .mode__wrapper--dark .dashboard-item:hover {
@@ -50,6 +54,11 @@
 
 .start-button__container {
   cursor: pointer;
+}
+@media (max-width: 786px) {
+  .dashboard {
+    max-width: 540px;
+  }
 }
 
 @media (max-width: 450px) {
