--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -37,6 +37,11 @@
   margin: 4px 0;
 }
 
+.mode__wrapper--dark .burger__line {
+  background-color: #fff;
+  opacity: 0.6;
+}
+
 .nav-links {
   display: flex;
   list-style: none;
@@ -85,6 +90,9 @@
   display: none;
 }
 
+.menu-collapse-link {
+}
+
 @media (max-width: 768px) {
   .nav__container {
     max-width: 540px;
@@ -117,6 +125,10 @@
     width: calc(100% - 20px);
     z-index: 999;
   }
+  .mode__wrapper--dark .menu-collapse {
+    background-color: #090b0d;
+  }
+
   .menu-collapse.opened {
     animation-name: slideIn;
     animation-duration: 0.3s;
@@ -134,6 +146,15 @@
 
     width: 100%;
     text-align: left;
+  }
+
+  .mode__wrapper--dark .menu-collapse a {
+    color: #fff;
+    opacity: 0.6;
+  }
+
+  .menu-collapse a:hover {
+    color: #3333334f;
   }
 
   @keyframes slideIn {
