--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -8,6 +8,7 @@
 }
 .dashboard-item {
   display: flex;
+  gap: 2px;
   justify-content: space-around;
   background: linear-gradient(to bottom, #535a67 5%, #505969 100%);
   background-color: #535a67;
