--- a/src/Components/ErrorsPopUp/ErrorsPopUp.css
+++ b/src/Components/ErrorsPopUp/ErrorsPopUp.css
@@ -1,6 +1,9 @@
 .errors__container {
+  position: absolute;
+  /* bottom: -25%; */
   margin: 10px auto;
   width: 300px;
+  left: 40%;
 }
 
 .disappear {
